@@ -1,15 +1,15 @@
 #!/bin/sh
 #*******************************************************************************
-# Copyright (c) 2009, 2016 Xored Software Inc and others.
+# Copyright (c) 2009, 2019 Xored Software Inc and others.
 # All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
+# are made available under the terms of the Eclipse Public License v2.0
 # which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
+# https://www.eclipse.org/legal/epl-v20.html
 #  
 # Contributors:
 # 	Xored Software Inc - initial API and implementation and/or initial documentation
 #*******************************************************************************
-export MAVEN_OPTS="-Xms512m -Xmx1024m -XX:MaxMetaspaceSize=256m -XX:MaxPermSize=256m"
+export MAVEN_OPTS="-Xms512m -Xmx1024m -XX:MaxMetaspaceSize=256m"
 
 OPTIONS="-Dtycho.localArtifacts=ignore $@"
 
